# django-cython

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.local.yaml  docker-compose.production.yaml  pyproject.toml  setup.py
.envs/.production/: .postgres
braavos/quickstart/: apps.py  urls.py  views.py
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/postgres/: Dockerfile
config/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: base.txt  build.txt  local.txt  production.txt
tutorial/quickstart/: urls.py  views.py
